<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/task_4"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/task_4" />
        <item
            android:id="@+id/task_5"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/task_5" />
        <item
            android:id="@+id/task_6"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/task_6" />
        <item
            android:id="@+id/task_7"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/task_7" />
        <item
            android:id="@+id/task_8"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/task_8" />
        <item
            android:id="@+id/task_9"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/task_9" />
        <item
            android:id="@+id/task_10"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/task_10" />
        <item
            android:id="@+id/task_11"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/task_11" />
        <item
            android:id="@+id/task_12"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/task_12" />
        <item
            android:id="@+id/task_13"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/task_13" />
        <item
            android:id="@+id/task_14"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/task_14" />
        <item
            android:id="@+id/task_15"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/task_15" />
        <item
            android:id="@+id/task_16"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/task_16" />
    </group>
</menu>