<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/task_4"
        android:name="com.example.myapplication.ui.task4.Task4Fragment"
        android:label="@string/task_4"
        tools:layout="@layout/fragment_task2" />

    <fragment
        android:id="@+id/task_5"
        android:name="com.example.myapplication.ui.task5.Task5Fragment"
        android:label="@string/task_5"
        tools:layout="@layout/fragment_task5" />
    <fragment
        android:id="@+id/task_6"
        android:name="com.example.myapplication.ui.task6.Task6Fragment"
        android:label="@string/task_6"
        tools:layout="@layout/fragment_task6" />

</navigation>